JOHNE - Add support for 'FFI_INTERFACE_AGE'

--- a/msvc/ffi/ffi.rc.in
+++ b/msvc/ffi/ffi.rc.in
@@ -8,8 +8,8 @@
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION @FFI_MAJOR_VERSION@,@FFI_MINOR_VERSION@,@FFI_MICRO_VERSION@,0
- PRODUCTVERSION @FFI_MAJOR_VERSION@,@FFI_MINOR_VERSION@,@FFI_MICRO_VERSION@,0
+ FILEVERSION @FFI_MAJOR_VERSION@,@FFI_MINOR_VERSION@,@FFI_MICRO_VERSION@,FFI_INTERFACE_AGE
+ PRODUCTVERSION @FFI_MAJOR_VERSION@,@FFI_MINOR_VERSION@,@FFI_MICRO_VERSION@,FFI_INTERFACE_AGE
  FILEFLAGSMASK 0x0L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -26,12 +26,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Harrison Consoles Inc."
             VALUE "FileDescription", "Libffi"
-            VALUE "FileVersion", "@FFI_MAJOR_VERSION@, @FFI_MINOR_VERSION@, @FFI_MICRO_VERSION@, 0"
+            VALUE "FileVersion", "@FFI_MAJOR_VERSION@, @FFI_MINOR_VERSION@, @FFI_MICRO_VERSION@, FFI_INTERFACE_AGE"
             VALUE "InternalName", "libffi-5"
             VALUE "LegalCopyright", "Built for Windows by John Emmas © 2012 - 2013"
             VALUE "OriginalFilename", "libffi-5.dll"
             VALUE "ProductName", "ffi"
-            VALUE "ProductVersion", "@FFI_MAJOR_VERSION@, @FFI_MINOR_VERSION@, @FFI_MICRO_VERSION@, 0"
+            VALUE "ProductVersion", "@FFI_MAJOR_VERSION@, @FFI_MINOR_VERSION@, @FFI_MICRO_VERSION@, FFI_INTERFACE_AGE"
         END
     END
     BLOCK "VarFileInfo"
