JOHNE - Modify 'win32-fixup.pl.in' to process 'ffi.vsprops'

--- a/win32-fixup.pl.in
+++ b/win32-fixup.pl.in
@@ -10,6 +10,14 @@ $micro = 13;
 $interface_age = 0;
 $have_long_double = 1;
 $ffi_exec_trampoline_table = 0;
+$generic_include_folder = "F:\\+GTK-SOURCES\\gnu-windows\\include";
+$generic_library_folder = "F:\\+GTK-SOURCES\\gnu-windows\\lib";
+$generic_win32_library_folder = "F:\\+GTK-SOURCES\\gnu-windows\\lib\\win32";
+$debug32_testsuite_folder = "..\\..\\..\\..\\gnu-win32\\TestApps\\Debug\\Mixbus\\bin";
+$release32_testsuite_folder = "..\\..\\..\\..\\gnu-win32\\TestApps\\Release\\Mixbus\\bin";
+$debug32_target_folder = "C:\\Program Files\\Mixbus\\bin";
+$release32_target_folder = "E:\\Mixbus\\bin";
+$target_sxs_folder = "F:\\+GTK-SOURCES\\gnu-windows\\include\\ardourext\\sys";
 $ffi_target = "X86_WIN32";
 
 sub process_file
@@ -30,6 +38,14 @@ sub process_file
 	    s/\@PACKAGE_STRING@/$package_string/g;
 	    s/\@PACKAGE_VERSION@/$package_version/g;
 	    s/\@VERSION@/$package_version/g;
+	    s/\@GenericIncludeFolder@/$generic_include_folder/g;
+	    s/\@GenericLibraryFolder@/$generic_library_folder/g;
+	    s/\@GenericWin32LibraryFolder@/$generic_win32_library_folder/g;
+	    s/\@Debug32TestSuiteFolder@/$debug32_testsuite_folder/g;
+	    s/\@Release32TestSuiteFolder@/$release32_testsuite_folder/g;
+	    s/\@Debug32TargetFolder@/$debug32_target_folder/g;
+	    s/\@Release32TargetFolder@/$release32_target_folder/g;
+	    s/\@TargetSxSFolder@/$target_sxs_folder/g;
 	    s/\@TARGET\@/$ffi_target/g;
 	    print OUTPUT;
 	}
@@ -40,5 +56,6 @@ process_file ("include/ffi.h");
 
 my $command=join(' ',@ARGV);
 if ($command eq -buildall) {
+	process_file ("ffi.vsprops");
 	process_file ("msvc/ffi/ffi.rc");
 }
