--- a/ffi.vsprops.in
+++ b/ffi.vsprops.in
@@ -2,7 +2,7 @@
 <VisualStudioPropertySheet
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="glib"
+	Name="ffi"
 	>
 	<UserMacro
 		Name="DllPrefix"
@@ -14,30 +14,34 @@
 	/>
 	<UserMacro
 		Name="GenericIncludeFolder"
-		Value="F:\+GTK-SOURCES\gnu-windows\include"
+		Value="@GenericIncludeFolder@"
+	/>
+	<UserMacro
+		Name="GenericLibraryFolder"
+		Value="@GenericLibraryFolder@"
 	/>
 	<UserMacro
 		Name="GenericWin32LibraryFolder"
-		Value="F:\+GTK-SOURCES\gnu-windows\lib\win32"
+		Value="@GenericWin32LibraryFolder@"
 	/>
 	<UserMacro
 		Name="Debug32TestSuiteFolder"
-		Value="..\..\..\TestApps\Debug\Mixbus\bin"
+		Value="@Debug32TestSuiteFolder@"
 	/>
 	<UserMacro
 		Name="Release32TestSuiteFolder"
-		Value="..\..\..\TestApps\Release\Mixbus\bin"
+		Value="@Release32TestSuiteFolder@"
 	/>
 	<UserMacro
 		Name="Debug32TargetFolder"
-		Value="C:\Program Files\Mixbus\bin"
+		Value="@Debug32TargetFolder@"
 	/>
 	<UserMacro
 		Name="Release32TargetFolder"
-		Value="E:\Mixbus\bin"
+		Value="@Release32TargetFolder@"
 	/>
 	<UserMacro
 		Name="TargetSxSFolder"
-		Value="F:\+GTK-SOURCES\gnu-windows\include\ardourext\sys"
+		Value="@TargetSxSFolder@"
 	/>
 </VisualStudioPropertySheet>
