--- a/msvc/ffi/ffi.rc.in
+++ b/msvc/ffi/ffi.rc.in
@@ -25,7 +25,7 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "CompanyName", "Harrison Consoles Inc."
-            VALUE "FileDescription", "Libffi"
+            VALUE "FileDescription", "Libffi for Ardour and Mixbus"
             VALUE "FileVersion", "@FFI_MAJOR_VERSION@, @FFI_MINOR_VERSION@, @FFI_MICRO_VERSION@, @FFI_INTERFACE_AGE@"
             VALUE "InternalName", "libffi-5"
             VALUE "LegalCopyright", "Built for Windows by John Emmas © 2012 - 2013"
