--- a/msvc/ffi.vcproj
+++ b/msvc/ffi.vcproj
@@ -19,8 +19,8 @@
 	<Configurations>
 		<Configuration
 			Name="Release 32|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)\bin"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\obj\$(ProjectName)"
+			OutputDirectory="$(ProjectDir)$(ConfigurationName)\bin"
+			IntermediateDirectory="$(ProjectDir)$(ConfigurationName)\obj\$(ProjectName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops;..\ffi.vsprops"
 			UseOfMFC="0"
@@ -79,8 +79,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)\$(DllPrefix)$(ProjectName)$(DllSuffix).dll"
-				AdditionalLibraryDirectories="$(SolutionDir)$(ConfigurationName)\bin"
-				ModuleDefinitionFile="$(SolutionDir)\$(ProjectName).def"
+				AdditionalLibraryDirectories="$(ProjectDir)$(ConfigurationName)\bin"
+				ModuleDefinitionFile="$(ProjectDir)\$(ProjectName).def"
 				EmbedManagedResourceFile=""
 				SubSystem="2"
 			/>
@@ -114,8 +114,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug 32|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)\bin"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\obj\$(ProjectName)"
+			OutputDirectory="$(ProjectDir)$(ConfigurationName)\bin"
+			IntermediateDirectory="$(ProjectDir)$(ConfigurationName)\obj\$(ProjectName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops;..\ffi.vsprops"
 			UseOfMFC="0"
@@ -174,8 +174,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)\$(DllPrefix)$(ProjectName)$(DllSuffix)D.dll"
-				AdditionalLibraryDirectories="$(SolutionDir)$(ConfigurationName)\bin"
-				ModuleDefinitionFile="$(SolutionDir)\$(ProjectName).def"
+				AdditionalLibraryDirectories="$(ProjectDir)$(ConfigurationName)\bin"
+				ModuleDefinitionFile="$(ProjectDir)\$(ProjectName).def"
 				EmbedManagedResourceFile=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -210,8 +210,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug 32 with Secure SCL|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)\bin"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\obj\$(ProjectName)"
+			OutputDirectory="$(ProjectDir)$(ConfigurationName)\bin"
+			IntermediateDirectory="$(ProjectDir)$(ConfigurationName)\obj\$(ProjectName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops;..\ffi.vsprops"
 			UseOfMFC="0"
@@ -270,8 +270,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)\$(DllPrefix)$(ProjectName)$(DllSuffix)SCLD.dll"
-				AdditionalLibraryDirectories="$(SolutionDir)$(ConfigurationName)\bin"
-				ModuleDefinitionFile="$(SolutionDir)\$(ProjectName).def"
+				AdditionalLibraryDirectories="$(ProjectDir)$(ConfigurationName)\bin"
+				ModuleDefinitionFile="$(ProjectDir)\$(ProjectName).def"
 				EmbedManagedResourceFile=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -306,8 +306,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release 32 with Debugging Capability|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)\bin"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\obj\$(ProjectName)"
+			OutputDirectory="$(ProjectDir)$(ConfigurationName)\bin"
+			IntermediateDirectory="$(ProjectDir)$(ConfigurationName)\obj\$(ProjectName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops;..\ffi.vsprops"
 			UseOfMFC="0"
@@ -361,13 +361,13 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Generate Module Definition file"
-				CommandLine="echo EXPORTS &gt; ffi.def&#x0D;&#x0A;cl /EP -DX86_WIN32 ..\msvc\ffi.symbols &gt;&gt; $(SolutionDir)\ffi.def&#x0D;&#x0A;"
+				CommandLine="echo EXPORTS &gt; ffi.def&#x0D;&#x0A;cl /EP -DX86_WIN32 ..\msvc\ffi.symbols &gt;&gt; $(ProjectDir)\ffi.def&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)\$(DllPrefix)$(ProjectName)$(DllSuffix)RDC.dll"
-				AdditionalLibraryDirectories="$(SolutionDir)$(ConfigurationName)\bin"
-				ModuleDefinitionFile="$(SolutionDir)\$(ProjectName).def"
+				AdditionalLibraryDirectories="$(ProjectDir)$(ConfigurationName)\bin"
+				ModuleDefinitionFile="$(ProjectDir)\$(ProjectName).def"
 				EmbedManagedResourceFile=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
