--- a/msvc/ffi.vcproj
+++ b/msvc/ffi.vcproj
@@ -53,7 +53,7 @@
 				AdditionalOptions="/FI$(TargetSxsFolder)\targetsxs.h"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories=".;..\src\x86;..\..\libffi\include;.."
+				AdditionalIncludeDirectories=".;..\src\x86;..\..\MB3Libffi\include;.."
 				PreprocessorDefinitions="X86_WIN32;_SECURE_SCL=0;WIN32;NDEBUG;_WINDOWS;_WINDLL;_CRT_SECURE_NO_WARNINGS;FFI_BUILDING;PIC;HAVE_CONFIG_H"
 				StringPooling="false"
 				RuntimeLibrary="2"
@@ -146,7 +146,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/FI$(TargetSxsFolder)\targetsxs.h"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;..\src\x86;..\..\libffi\include;.."
+				AdditionalIncludeDirectories=".;..\src\x86;..\..\MB3Libffi\include;.."
 				PreprocessorDefinitions="X86_WIN32;_SECURE_SCL=0;_HAS_ITERATOR_DEBUGGING=0;WIN32;DEBUG;_DEBUG;_WINDOWS;_WINDLL;_CRT_SECURE_NO_WARNINGS;FFI_BUILDING;PIC;HAVE_CONFIG_H"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -242,7 +242,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/FI$(TargetSxsFolder)\targetsxs.h"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;..\src\x86;..\..\libffi\include;.."
+				AdditionalIncludeDirectories=".;..\src\x86;..\..\MB3Libffi\include;.."
 				PreprocessorDefinitions="X86_WIN32;_SECURE_SCL=1;_HAS_ITERATOR_DEBUGGING=1;WIN32;DEBUG;_DEBUG;_WINDOWS;_WINDLL;_CRT_SECURE_NO_WARNINGS;FFI_BUILDING;PIC;HAVE_CONFIG_H"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -339,7 +339,7 @@
 				AdditionalOptions="/FI$(TargetSxsFolder)\targetsxs.h"
 				Optimization="0"
 				InlineFunctionExpansion="0"
-				AdditionalIncludeDirectories=".;..\src\x86;..\..\libffi\include;.."
+				AdditionalIncludeDirectories=".;..\src\x86;..\..\MB3Libffi\include;.."
 				PreprocessorDefinitions="X86_WIN32;_SECURE_SCL=0;WIN32;NDEBUG;_WINDOWS;_WINDLL;_CRT_SECURE_NO_WARNINGS;FFI_BUILDING;PIC;HAVE_CONFIG_H"
 				StringPooling="false"
 				RuntimeLibrary="2"
