--- a/msvc/ffi.vcproj
+++ b/msvc/ffi.vcproj
@@ -303,7 +303,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy /Y &quot;..\include\ffi.h&quot; &quot;$(GenericIncludeFolder)\ffi&quot;&#x0D;&#x0A;copy /Y &quot;..\src\x86\ffitarget.h&quot; &quot;$(GenericIncludeFolder)\ffi&quot;&#x0D;&#x0A;copy /Y &quot;$(OutDir)\$(TargetName).dll&quot; &quot;$(Release32TargetFolder)\$(TargetName).dll&quot;&#x0D;&#x0A;copy /Y &quot;$(OutDir)\$(TargetName).dll&quot; &quot;$(Release32TestSuiteFolder)\$(TargetName).dll&quot;&#x0D;&#x0A;copy /Y &quot;$(OutDir)\$(TargetName).lib&quot; &quot;$(GenericWin32LibraryFolder)\$(TargetName).lib&quot;&#x0D;&#x0A;"
+				CommandLine="copy /Y &quot;..\include\ffi.h&quot; &quot;$(GenericIncludeFolder)\ffi&quot;&#x0D;&#x0A;copy /Y &quot;..\src\x86\ffitarget.h&quot; &quot;$(GenericIncludeFolder)\ffi&quot;&#x0D;&#x0A;copy /Y &quot;$(OutDir)\$(TargetName).dll&quot; &quot;$(Release32TestSuiteFolder)\$(TargetName).dll&quot;&#x0D;&#x0A;copy /Y &quot;$(OutDir)\$(TargetName).lib&quot; &quot;$(GenericWin32LibraryFolder)\$(TargetName).lib&quot;&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
