--- a/msvc/ffi.vcproj
+++ b/msvc/ffi.vcproj
@@ -155,6 +155,7 @@
 				StringPooling="false"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				EnableEnhancedInstructionSet="1"
 				RuntimeTypeInfo="false"
 				PrecompiledHeaderFile=""
 				WarningLevel="3"
@@ -249,6 +250,7 @@
 				PreprocessorDefinitions="X86_WIN32;_SECURE_SCL=0;WIN32;NDEBUG;_WINDOWS;_WINDLL;_CRT_SECURE_NO_WARNINGS;FFI_BUILDING;PIC;HAVE_CONFIG_H"
 				StringPooling="false"
 				RuntimeLibrary="2"
+				EnableEnhancedInstructionSet="1"
 				RuntimeTypeInfo="false"
 				PrecompiledHeaderFile=""
 				WarningLevel="3"
