--- a/libffi.pc.in
+++ b/libffi.pc.in
@@ -1,8 +1,7 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
-libdir=@libdir@
 toolexeclibdir=@toolexeclibdir@
-includedir=${libdir}/@PACKAGE_NAME@/include
+includedir=${toolexeclibdir}/@PACKAGE_NAME@/include
 
 Name: @PACKAGE_NAME@
 Description: Library supporting Foreign Function Interfaces
